fix: resizing gap techIcons

--- a/src/components/landing/landing.module.scss
+++ b/src/components/landing/landing.module.scss
@@ -41,7 +41,6 @@
   position: absolute;
   bottom: 35px;
   left: 0px;
-  font-size: 0.8rem;
   text-decoration: none;
 }
 
