--- a/src/components/projectImage/projectImage.module.scss
+++ b/src/components/projectImage/projectImage.module.scss
@@ -1,5 +1,4 @@
 .img {
   flex: 0 0 200px;
-  border-radius: 20px;
   scroll-snap-align: center;
 }
